# tcp_multiplexer

./: .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Cargo.toml  Dockerfile  connectionSet.h  constants.h  multiplexer  multiplexer.c  multiplexer.cpp  pollSet.h
src/: child_split.rs  codec.rs  dispatcher.rs  dummy.rs  incoming.rs  main.rs  outgoing.rs  tcp.rs
