[package]
name = "tcp_multiplexer"
version = "0.1.0"
authors = ["Felix Giese <s4fegies@uni-trier.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = ">= 0.2.6, <1", features = ["tcp", "process", "io-util", "io-std", "rt-core", "sync", "stream"] }
tokio-util =  { version = ">= 0.2.0, < 0.3", features = ["codec"] }
bytes = "*"
futures = { version = ">= 0.3.1, <0.4"}